[package]
name = "async-err"
version = "0.1.0"
edition = "2021"
authors = ["Blake Park <blake.r.park@gmail.com>"]
license = "MIT"
description = "Contextual asynchronous error handling."
repository = "https://github.com/ParkBlake/async-err"

[dependencies]
once_cell = "1.21.3"
parking_lot = "0.12.4"
downcast-rs = "2.0"
tokio = { version = "1", features = ["full"] }

chrono = { version = "0.4", optional = true }

[features]
hooks = []
chrono = ["dep:chrono"]


[lib]
name = "async_err"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"
